--- a/src/App.css
+++ b/src/App.css
@@ -8,6 +8,11 @@
 h1 {
   font-size: 3em;
   color: #fff;
+
+  @media screen and (max-width: 400px) {
+    font-size: 2.4em;
+    line-height: 45px;
+  }
 }
 
 input {
@@ -17,10 +22,14 @@ input {
   border: none;
   width: 60%;
   max-width: 300px;
+
+        @media screen and (max-width: 400px) {
+            margin-top: 10px;
+        }
 }
 
 button {
-  background-color: #ff9800;
+  background-color: #000;
   padding: 10px;
   border: none;
   border-radius: 0 20px 20px 0;
@@ -30,5 +39,5 @@ button {
 }
 
 button:hover {
-  background-color: #f1a137;
+  background-color: #000000c5;
 }
