--- a/src/components/WeatherInformations5Days/styles.css
+++ b/src/components/WeatherInformations5Days/styles.css
@@ -1,6 +1,11 @@
+
 h3 {
     text-align: center;
     font-size: 2em;
+
+        @media screen and (max-width: 400px) {
+            font-size: 1.5rem;
+        }
 }
 .container-item {
     display: flex;
@@ -8,6 +13,12 @@ h3 {
     justify-content: space-between;
     margin-top: 20px;
     gap: 10px;
+
+        @media screen and (max-width: 400px) {
+            flex-direction: column;
+            gap: 20px;
+        }
+
 }
 
 .weather-item {
@@ -23,3 +34,4 @@ h3 {
     font-size: 1.1em;
     font-weight: 400;
 }
+
