--- a/src/index.css
+++ b/src/index.css
@@ -10,7 +10,7 @@
 }
 
 body {
-  background: linear-gradient(to right, #00b4db, #0083b0 );
+  background-color: #1E90FF;
   color: #000;
   line-height: 1.6;
 }
